# ibridges-plugin-dataverse

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python_package.yml
ibridgescontrib/ibridgesdvn/: __init__.py  dataverse.py  ds_meta.py  dvn_alias.py  dvn_config.py  dvn_dataset_commands.py  dvn_init.py  dvn_operations.py  dvn_setup.py  gui_dataverse.py  gui_popup_widgets.py  gui_thread.py  json_templates.py  uiCreateDataset.py  uiCreateMetadata.py  uiDataverse.py  utils.py
ibridgescontrib/ibridgesdvn/cli/: dvn_init.py  dvn_setup.py
ibridgescontrib/ibridgesdvn/cli/dscommands/: dv_add_file.py  dv_cleanup.py  dv_create_ds.py  dv_delete_ds.py  dv_drafts.py  dv_push.py  dv_rm_file.py  dv_status.py
ibridgescontrib/ibridgesdvn/dscommands/: dv_add_file.py  dv_cleanup.py  dv_create_ds.py  dv_delete_ds.py  dv_drafts.py  dv_push.py  dv_rm_file.py  dv_status.py
ibridgescontrib/ibridgesdvn/gui/: dataset_table_controller.py  dataverse_connection_manager.py  draft_manager.py  gui_dataverse.py  gui_popup_widgets.py  gui_thread.py  irods_tree_controller.py  push_workflow_manager.py  uiDataverse.py
ibridgescontrib/ibridgesdvn/gui/ui_files/: tabDataverse.ui
ibridgescontrib/ibridgesdvn/ui_files/: create_dataset.ui  metadata_form.ui  tabDataverse.ui
ibridgesdvn/: dvn_config.py
