[build-system]
requires = ["setuptools>=61.0", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ibridges-info"
authors = [
    { name = "Christine Staiger", email = "c.staiger@uu.nl" },
]
description = "iBridges plugin for interacting with Dataverse"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["irods", "data management", "storage", "dataverse"]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "ibridges",
    "pyDataverse",
    "httpx"
]

dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/iBridges-for-iRODS/iBridges"
documentation = "https://github.com/iBridges-for-iRODS/iBridges"

[project.optional-dependencies]
test = [
    "pylint",
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-tqdm",
]

[project.entry-points."ibridges.shell"]
dvnalias = "ibridgescontrib.ibridgesdvn:ALIAS_COMMANDS"
dvninit = "ibridgescontrib.ibridgesdvn:INIT_COMMANDS"

[tool.setuptools]
packages = ["ibridgescontrib"]

[tool.setuptools_scm]
write_to = "ibridgescontrib/ibridgesdvn/_version.py"

[[tool.mypy.overrides]]
module = [
    "irods.*",
    "importlib_metadata.*",
]
ignore_missing_imports = true

[tool.pylint.'MASTER']
ignore-patterns="_version.py"

[tool.pylint.'BASIC']
good-names=["e", "f", "m"]


[tool.ruff]
exclude = ["_version.py"]
line-length = 100
lint.select = ["D", "E", "F", "W", "I", "N"]
lint.ignore = ["D203", "D213"]
